Include windows in supported platforms so that self upgrade will trigger

--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -220,7 +220,7 @@ bundle agent cfengine_software_version
 # upgrading.
 {
   classes:
-      "__supported_platform" -> { "ENT-5045", "ENT-5152" }
+      "__supported_platform" -> { "ENT-5045", "ENT-5152", "ENT-4094" }
         or => {
                 "redhat.!redhat_4",
                 "centos.!centos_4",
@@ -230,6 +230,7 @@ bundle agent cfengine_software_version
                 "aix",
                 "SUSE_11",
                 "SUSE_12",
+                "windows", # ENT-4094
         };
 
       "__new_implementation"
