Include windows in supported platforms so that self upgrade will trigger
(cherry picked from commit 07ffb6968ac11bdd2a6a461688bcc788b0832b51)

--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -203,7 +203,7 @@ bundle agent cfengine_software_version
 # upgrading.
 {
   classes:
-      "__supported_platform" -> { "ENT-5045", "ENT-5152" }
+      "__supported_platform" -> { "ENT-5045", "ENT-5152", "ENT-4094" }
         or => {
                 "redhat.!redhat_4",
                 "centos.!centos_4",
@@ -213,6 +213,7 @@ bundle agent cfengine_software_version
                 "aix",
                 "SUSE_11",
                 "SUSE_12",
+                "windows", # ENT-4094
         };
 
       # Add "windows" to __new_implementation classes with ENT-6823
