--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -133,29 +133,10 @@ bundle agent cfengine_software
     windows::
       "$(sys.bindir)$(const.dirsep)vercmp.ps1"
         create => "true",
-        template_method => "inline_mustache",
-        edit_template_string => `param([string]$version1,[string]$comparison,[string]$version2)
-if ( "$comparison" -eq "lt" ) {
-  if ([System.Version]"$version1" -lt [System.Version]"$version2") {
-    "$version1 is less than $version2"
-    exit 0
-  } else {
-      "$version1 is not less than $version2"
-      exit 1
-  }
-}
-if ( "$comparison" -eq "eq" ) {
-  if ([System.Version]"$version1" -eq [System.Version]"$version2") {
-    "$version1 is equal to $version2"
-    exit 0
-  } else {
-      "$version1 is not equal to $version2"
-      exit 1
-  }
-} else {
-    "PROGRAMMING ERROR"
-    exit 3
-}`;
+        template_method => "mustache",
+        edit_template => "$(this.promise_dirname)$(const.dirsep)/templates/vercmp.ps1",
+        template_data => mergedata( '{}' ),
+        comment => "We need to use specialized version comparison logic for unattended self upgrades.";
 
 }
 
