Added ability to specify a list of bundles to run before autorun (for classification)
With this change, you can specify a list of bundles to run before autorun
polices. This can be useful if you want to have autorun policies execute based
on soft classes that are not persistent. E.g. prod hosts.

Ticket: ENT-6603
Changelog: Tilte

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -47,6 +47,9 @@ body common control
                           def,
                           @(cfengine_enterprise_hub_ha.classification_bundles),
 
+                          # Custom classification
+                          @(def.bundlesequence_classification),
+
                           # autorun system
                           services_autorun,
                           @(services_autorun.bundles),
