Added ability to specify a list of bundles to run before autorun (for classification)
With this change, you can specify a list of bundles to run before autorun
polices. This can be useful if you want to have autorun policies execute based
on soft classes that are not persistent. E.g. prod hosts.

Ticket: ENT-6603
Changelog: Title

(cherry picked from commit 06dbe78951fbb0e8ed7a4d2df90a655b82e19de5)

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -15,6 +15,9 @@ body common control
                           def,
                           @(cfengine_enterprise_hub_ha.classification_bundles),
 
+                          # Custom classification
+                          @(def.bundlesequence_classification),
+
                           # autorun system
                           services_autorun,
                           @(services_autorun.bundles),
