Allows overriding modules and plugins directories path on policy server
Introduces mpf_update_modules_master_location and
mpf_update_plugins_master_location variables (configurable via augments
file) for configuring where on the policy server the modules and plugins
directories reside. Do not rely on the client's operating system, as the
policy server can be installed on a different one.

This patch removes the
cfe_internal_update_policy_vars_modules_dir_windows and
cfe_internal_update_policy_vars_plugins_dir_windows handles, that
didn't seem to be referred anywhere.

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -109,6 +109,18 @@ bundle common update_def
         string => "$(def.mpf_update_policy_master_location)",
         if => isvariable( "def.mpf_update_policy_master_location" );
 
+      "mpf_update_modules_master_location" -> { "CFE-3318" }
+        comment => "Directory where clients should get modules from.",
+        string => ifelse( isvariable("def.mpf_update_modules_master_location"),
+                          "$(def.mpf_update_modules_master_location)",
+                          "@prefix@/modules" );
+
+      "mpf_update_plugins_master_location" -> { "CFE-3318" }
+        comment => "Directory where clients should get plugins from.",
+        string => ifelse( isvariable("def.mpf_update_plugins_master_location"),
+                          "$(def.mpf_update_plugins_master_location)",
+                          "@prefix@/plugins" );
+
     # enable_cfengine_enterprise_hub_ha is defined below
     # Disabled by default
 
