Fixed loading of platform specific inventory on AIX
AIX was not considered in the expression that determined which set of
inventory policy files to load resulting in only generic inventory
policy being loaded. This change corrects the expression so that AIX
loads the AIX specific inventory.

Ticket: CFE-3614
Changelog: Title

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -138,7 +138,7 @@ bundle common inventory
 # Tested to work properly against 3.5.x
 {
   classes:
-      "other_unix_os" expression => "!windows.!macos.!linux.!freebsd";
+      "other_unix_os" expression => "!(windows|macos|linux|freebsd|aix)";
       "specific_linux_os" expression => "redhat|debian|suse|sles";
 
   vars:
