Always update modules from masterfiles to $(sys.workdir)/modules
Previously only distribution packages would cause modules to be upgraded.

Now new versions of masterfiles will also cause modules to be upgraded.

Ticket: ENT-5752
Changelog: title

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,6 @@ stamp-h1
 /ylwrap
 /test-driver
 CFVERSION
-modules/packages/apt_get
-modules/packages/yum
-modules/packages/zypper
 
 # Misc.
 /cf_promises_*
@@ -38,3 +35,4 @@ modules/packages/zypper
 
 # Atom-IDE
 .ropeproject
+build
