--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
-	modules/packages \
 	tests/
 
 # See configure.ac for MASTERFILES_INSTALL_TARGETS.
@@ -30,3 +29,18 @@ tar-package:
 	        > "$$origdir"/$(PACKAGE)-$(VERSION)-$(RELEASE).pkg.tar.gz  \
 	)  ;  \
 	[ x$$pkgdir != x ]  &&  rm -rf $$pkgdir
+
+# copy package modules for tests to build directory
+vendored := modules/packages/vendored
+modules := $(patsubst $(vendored)/%.mustache,build/modules/packages/%,$(wildcard $(vendored)/*.mustache))
+
+all-local: $(modules)
+
+build/modules/packages/%:
+	mkdir -p build/modules/packages
+	TEMPLATE=$$(echo $@ | sed 's,build/modules/packages,modules/packages/vendored,'); \
+	cp $$TEMPLATE.mustache $@
+	chmod +x $@
+
+clean-local:
+	rm -rf build
