--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,6 @@ stamp-h1
 /ylwrap
 /test-driver
 CFVERSION
-modules/packages/apt_get
-modules/packages/yum
-modules/packages/zypper
 
 # Misc.
 /cf_promises_*
@@ -37,3 +34,4 @@ modules/packages/zypper
 
 # Atom-IDE
 .ropeproject
+build
