Added class to prevent hub from seeding binary packages for use in self upgrade
Sometimes (especially in testing environments) it's desirable to avoid
downloading packages to master_software_updates on the hub. This can already be
avoided by carefully defining the trigger_upgrade class so that it is not
defined on the hub, but it's helpful to have an explicit way of disabling this
functionality.

Ticket: ENT-7544
Changelog: Title

--- a/standalone_self_upgrade.cf.in
+++ b/standalone_self_upgrade.cf.in
@@ -38,7 +38,7 @@ bundle agent main
 
       "cfengine_software";
 
-    am_policy_hub|policy_server::
+    (am_policy_hub|policy_server).!mpf_disable_hub_masterfiles_software_update_seed::
 
       "Master Software Repository Data"
         usebundle => cfengine_master_software_content;
