Auto-detect current release and add it to policy
For self-update needs.

Current release number is taken from env variables, or detected from git
tags. If everything else fails, it defaults to '1' as before.

Ticket: ENT-4822

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -8,6 +8,7 @@ bundle common update_def
     any::
 
       "current_version" string => "@VERSION@";
+      "current_release" string => "@RELEASE@";
 
       # MPF Controls
 
