Auto-detect current release and add it to policy
For self-update needs.

Current release number is taken from env variables, or detected from git
tags. If everything else fails, it defaults to '1' as before.

Ticket: ENT-4822
(cherry picked from commit 2ec642c0e66f9bbe2455b352b6cbb07a2c3f64b4)

--- a/controls/update_def.cf.in
+++ b/controls/update_def.cf.in
@@ -14,6 +14,7 @@ bundle common update_def
       "sys_policy_hub_port_exists" expression => isvariable("sys.policy_hub_port");
   vars:
       "current_version" string => "@VERSION@";
+      "current_release" string => "@RELEASE@";
 
     !feature_def_json_preparse::
       "augments_file" string => "$(this.promise_dirname)/../../def.json";
