--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 git:
   depth: 9999
 language: c
+os: linux
+dist: focal
 sudo: required
 
 matrix:
@@ -20,17 +22,12 @@ matrix:
     # JOB 2
     - env: CF_VERSION=master
       install:
-        - sudo apt install -y software-properties-common
-        - sudo add-apt-repository -y ppa:deadsnakes/ppa
         - sudo apt update
-        - sudo apt -y install python3.6
-        - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 1
-        - sudo curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
-        - sudo python3 get-pip.py
-        - sudo rm get-pip.py
+        - sudo apt -y install python3
+        - sudo apt -y install python3-pip
         - sudo pip3 install cf-remote
         - BRANCH=$CF_VERSION
-        - PKG_URL=`cf-remote --version $BRANCH list ubuntu16 agent | tail -n 1`
+        - PKG_URL=`cf-remote --version $BRANCH list ubuntu20 agent | tail -n 1`
         - wget $PKG_URL
         - sudo dpkg -i ./$(basename ${PKG_URL})
 
