--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,16 @@ CFRELEASE
 
 # Misc.
 /cf_promises_*
+modules/packages/apt_get
+modules/packages/yum
+modules/packages/zypper
+
+# tests
+tests/acceptance/30_custom_promise_types/__pycache__/
+tests/acceptance/30_custom_promise_types/cfengine.py
+tests/unit/test-suite.log
+tests/unit/test_package_module_apt_get.log
+tests/unit/test_package_module_yum.log
 
 # vim
 .*.sw[po]
