Fixed debug report indicating when both autorun and inputs are concurrently enabled
Previously a debug report would be emitted when services_autorun was defined
instead of when both services_autorun_inputs and services_autorun_bundles were
concurrently enabled. This change simply clarifies the different combination.

Ticket: CFE-4017
Changelog: None
(cherry picked from commit e411fb949008558f3d325bbd0f02acb291e9e27b)

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -336,7 +336,16 @@ bundle common services_autorun
         ifvarclass => "!services_autorun";
 
       "DEBUG $(this.bundle): Services Autorun Enabled"
-        ifvarclass => "services_autorun";
+        if => "services_autorun";
+
+      "DEBUG $(this.bundle): Services Autorun Bundles Enabled"
+        if => "services_autorun_bundles";
+
+      "DEBUG $(this.bundle): Services Autorun Inputs Enabled"
+        if => "services_autorun_inputs";
+
+      "DEBUG $(this.bundle): Services Autorun (Bundles & Inputs) Enabled"
+        if => "services_autorun_inputs.services_autorun_bundles";
 
       "DEBUG $(this.bundle): adding input='$(inputs)'"
         ifvarclass => isvariable("inputs");
