--- a/promises.cf.in
+++ b/promises.cf.in
@@ -382,7 +382,7 @@ bundle common services_autorun
         if => "services_autorun_inputs";
 
       "DEBUG $(this.bundle): Services Autorun (Bundles & Inputs) Enabled"
-        if => "services_autorun";
+        if => "services_autorun_inputs.services_autorun_bundles";
 
       "DEBUG $(this.bundle): adding input='$(inputs)'"
         if => isvariable("inputs");
