--- a/.github/workflows/style_check.yml
+++ b/.github/workflows/style_check.yml
@@ -1,16 +1,7 @@
 name: Style Check
 
 on:
-  # run this workflow on pull_request activity
-  # this includes opening and pushing more commits
-  pull_request:
-    branches: [ master, 3.18.x, 3.15.x ]
-
-  # run this workflow on push/merge activity
-  # pull_request activity won't detect changes
-  # in the upstream branch before we merge
-  push:
-    branches: [ master, 3.18.x, 3.15.x ]
+  workflow_call:
 
 jobs:
   style_check:
