--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   style_check:
-    uses: craigcomstock/masterfiles/.github/workflows/style_check.yml@ENT-9162/master
+    uses: cfengine/masterfiles/.github/workflows/style_check.yml
   tests:
     needs: style_check
-    uses: craigcomstock/masterfiles/.github/workflows/tests.yml@ENT-9162/master
+    uses: cfengine/masterfiles/.github/workflows/tests.yml
