Add valgrind check to github actions
Ticket: ENT-9190
(cherry picked from commit 1d538525ec50d0df513b1329fe95080c1c1f92b4)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,6 @@ jobs:
   tests:
     needs: style_check
     uses: ./.github/workflows/tests.yml
+  valgrind:
+    needs: style_check
+    uses: ./.github/workflows/valgrind.yml
