--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,12 +9,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: masterfiles
+      - name: Get Togethers
+        uses: cfengine/together-javascript-action@v1.4
+        id: together
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout Core
         uses: actions/checkout@v3
         with:
           repository: cfengine/core
           path: core
-          ref: ${{ github.base_ref }}
+          ref: ${{steps.together.outputs.core}}
       - name: Install CFEngine with cf-remote
         run: |
           pip3 install cf-remote
