--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -9,12 +9,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: masterfiles
+      - name: Get Togethers
+        uses: cfengine/together-javascript-action@v1.4
+        id: together
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout Core
         uses: actions/checkout@v3
         with:
           repository: cfengine/core
           path: core
-          ref: ${{ github.base_ref }}
+          ref: ${{steps.together.outputs.core}}
           submodules: recursive
       - name: Install dependencies
         run: sudo apt-get update -y && sudo apt-get install -y libssl-dev libpam0g-dev liblmdb-dev byacc curl libyaml-dev valgrind
