--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,11 @@ name: Continuous Integration
 on:
   # run this workflow on pull_request activity
   # this includes opening and pushing more commits
-  pull_request:
-    branches: [ master, 3.21.x, 3.18.x ]
 
   # run this workflow on push/merge activity
   # pull_request activity won't detect changes
   # in the upstream branch before we merge
-  push:
-    branches: [ master, 3.21.x, 3.18.x ]
+  [ push, pull_request ]
 
 
 jobs:
