--- a/promises.cf.in
+++ b/promises.cf.in
@@ -120,6 +120,12 @@ body common control
         ignore_missing_inputs => "$(def.control_common_ignore_missing_inputs)";
 
 
+    control_common_tls_min_version_defined::
+        tls_min_version => "$(default:def.control_common_tls_min_version)"; # See also: allowtlsversion in body server control
+
+    control_common_tls_ciphers_defined::
+        tls_ciphers => "$(default:def.control_common_tls_ciphers)"; # See also: allowciphers in body server control
+
 }
 
 bundle common inventory
