--- a/promises.cf.in
+++ b/promises.cf.in
@@ -120,6 +120,9 @@ body common control
         ignore_missing_inputs => "$(def.control_common_ignore_missing_inputs)";
 
 
+      # The number of minutes after which last-seen entries are purged from cf_lastseen.lmdb
+        lastseenexpireafter => "$(def.control_common_lastseenexpireafter)";
+
     control_common_tls_min_version_defined::
         tls_min_version => "$(default:def.control_common_tls_min_version)"; # See also: allowtlsversion in body server control
 
