Adjust acceptance test job for non-master branches
Ticket: ENT-10667
Changelog: none
(cherry picked from commit c8af56be04a4f22742ac4651d034b1cb0b87a8a9)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install CFEngine with cf-remote
         run: |
           pip3 install cf-remote
-          cf-remote --version master install --clients localhost
+          cf-remote --version $GITHUB_BASE_REF install --clients localhost
       - name: Run autotools / configure
         run: |
           INSTDIR=$HOME/cf_install
