Fix bootstrap-policy-run-check to fail when finding errors
Ticket: none
Changelog: none

--- a/.github/workflows/bootstrap_policy_run_check.yml
+++ b/.github/workflows/bootstrap_policy_run_check.yml
@@ -10,4 +10,4 @@ jobs:
         with:
           path: masterfiles
       - name: Install, bootstrap, policy run
-        run: masterfiles/ci/run.sh
+        run: masterfiles/ci/bootstrap-policy-run-check.sh
