Added freebsd package_module and package_inventory since we have pkg packages module available
Ticket: CFE-4345
Changelog: title
(cherry picked from commit 86d4bf88bae49cdda241c23858a04329e4934d5f)

--- a/promises.cf.in
+++ b/promises.cf.in
@@ -104,11 +104,14 @@ body common control
     aix.!disable_inventory_package_refresh::
       package_inventory => { $(package_module_knowledge.platform_default), @(default:package_module_knowledge.additional_inventory) };
 
+    freebsd.!disable_inventory_package_refresh::
+          package_inventory => { $(package_module_knowledge.platform_default), @(default:package_module_knowledge.additional_inventory) };
+
     aix::
       package_module => $(package_module_knowledge.platform_default);
 
 
-    (debian|redhat|suse|sles|opensuse|amazon_linux)::
+    (debian|redhat|suse|sles|opensuse|amazon_linux|freebsd)::
           package_module => $(package_module_knowledge.platform_default);
 
       # CFEngine 3.12.2+ and 3.14+ have new package module on Windows
